# spipack

./: .gitmodules  .travis.yml  CMakeLists.txt  GenerateDocumentation.sh  README.txt  generate-exahype-source.sh  spipack.doxyfile.in
cmake/: FindDependencies.cmake  FindGTEST.cmake  FindMUQ.cmake  FindYAML.cmake  SPIPACKConfig.cmake.in  SPIPACKDirectories.hpp.in
cmake/append/: AppendBOOST.cmake  AppendEIGEN3.cmake  AppendHDF5.cmake  AppendMUQ.cmake  AppendNLOPT.cmake  AppendPARCER.cmake  AppendSPECTRA.cmake  AppendTrilinos.cmake  AppendYAML.cmake
cmake/check/: CheckBOOST.cmake  CheckMUQ.cmake  CheckNLOPT.cmake  CheckPARCER.cmake  CheckSPECTRA.cmake  CheckTrilinos.cmake  CheckYAML.cmake
cmake/exahype/: BuildExaHyPE.cmake
cmake/find/: FindBOOST.cmake  FindEIGEN3.cmake  FindGTEST.cmake  FindHDF5.cmake  FindMUQ.cmake  FindNLOPT.cmake  FindPARCER.cmake  FindSPECTRA.cmake  FindTrilinos.cmake  FindYAML.cmake
documentation/: spipack.doxyfile.in
documentation/html/: BandwidthCostTests_8cpp.html  BandwidthCost_8cpp.html  BandwidthCost_8hpp.html  Kernel_8cpp.html  (+229 more)
examples/: CMakeLists.txt
examples/KineticEquations/: CMakeLists.txt
examples/KineticEquations/collision-operator/: CMakeLists.txt  PlotTools.py  VaryCollisionEnergy.hpp  _plot-elastic-collisions.py  _plot-hyperelastic-collisions.py  _plot-inelastic-collisions.py  _run-elastic-collisions.cpp  _run-hyperelastic-collisions.cpp  _run-inelastic-collisions.cpp  description.md
examples/KineticEquations/collision-operator/figures/elastic-collisions/: .gitignore
examples/KineticEquations/nonzero-source-term/: CMakeLists.txt  _plot-results.py  _run-nonzero-source-term.cpp  description.md
examples/KineticEquations/run-microscale-model/: _plot-results.py  _run-microscale-model.cpp
examples/KineticEquations/vary-external-acceleration/: CMakeLists.txt  ComponentwiseQuadraticExternalAcceleration.cpp  ComponentwiseQuadraticExternalAcceleration.hpp  LinearExternalAcceleration.cpp  LinearExternalAcceleration.hpp  PlotTools.py  QuadraticExternalAcceleration.cpp  QuadraticExternalAcceleration.hpp  VaryExternalAcceleration.hpp  _plot-componentwise-quadratic-external-acceleration.py  _plot-linear-external-acceleration.py  _plot-quadratic-external-acceleration.py  _run-componentwise-quadratic-external-acceleration.cpp  _run-linear-external-acceleration.cpp  _run-microscale-model.cpp  _run-quadratic-external-acceleration.cpp  description.md
examples/KineticEquations/vary-external-acceleration/figures/componentwise-quadratic-external-acceleration/: .gitignore  make-video.sh
examples/NumericalSolvers/: CMakeLists.txt
examples/NumericalSolvers/Kolmogorov-eigendecomposition/: CMakeLists.txt  _Kolmogorov-eigen-decomposition.cpp  _plot_result.py  description.md
examples/NumericalSolvers/Kolmogorov-inverse/: CMakeLists.txt  _Kolmogorov-inverse.cpp  _plot-results.py  description.md
examples/NumericalSolvers/Kolmogorov-operator/: CMakeLists.txt  _Kolmogorov-eigen-decomposition.cpp  _plot_result.py  description.md
examples/NumericalSolvers/density-estimation/: CMakeLists.txt  _density-estimation.cpp  _plot_result.py  description.md
examples/NumericalSolvers/heat-matrix-eigenvalues/: CMakeLists.txt  _heat-matrix-eigenvalues.cpp  _plot_result.py  description.md
examples/NumericalSolvers/heat-matrix-eigenvalues/_layouts/: default.html
modules/: CMakeLists.txt  _run-parallel-tests.cpp  _run-tests.cpp
modules/ConservationEquations/: CMakeLists.txt
modules/ConservationEquations/src/: Boltzmann.cpp  CMakeLists.txt  CompressibleEuler.cpp
modules/ConservationEquations/src/ExaHyPE/Boltzmann/: AbstractBoltzmannSolver_ADERDG.cpp  AbstractBoltzmannSolver_FV.cpp  BoltzmannSolver.cpp  BoltzmannSolver_ADERDG.cpp  BoltzmannSolver_FV.cpp  BoltzmannWriter.cpp  BoltzmannWriter_FV.cpp  EulerSubcellsWriter.cpp  EulerWriter.cpp  KernelCalls.cpp  PlotQuantitiesOfInterest.cpp  UpdateMicroscaleMethods.cpp  UpdateParticleMethods.cpp
modules/ConservationEquations/src/ExaHyPE/CompressibleEuler/: AbstractCompressibleEulerSolver_ADERDG.cpp  AbstractCompressibleEulerSolver_FV.cpp  CompressibleEulerSolver.cpp  CompressibleEulerSolver_ADERDG.cpp  CompressibleEulerSolver_FV.cpp  EulerSubcellsWriter.cpp  EulerWriter.cpp  KernelCalls.cpp
modules/ConservationEquations/tests/: BoltzmannTests.cpp  CMakeLists.txt  CompressibleEulerTests.cpp  ParallelBoltzmannTests.cpp
modules/KineticEquations/: CMakeLists.txt
modules/KineticEquations/src/: CMakeLists.txt  ConditionalVelocityDistribution.cpp  KineticModels.cpp  KineticParticleModels.cpp  MacroscaleInformation.cpp
modules/KineticEquations/tests/: CMakeLists.txt  ConditionalVelocityDistributionTests.cpp  KineticModelsTests.cpp  KineticParticleModelsTests.cpp  MacroscaleInformationTests.cpp
modules/NumericalSolvers/: CMakeLists.txt
modules/NumericalSolvers/examples/: CMakeLists.txt
modules/NumericalSolvers/examples/GraphLaplacian/: GraphLaplacianExamples.cpp
modules/NumericalSolvers/src/: CMakeLists.txt  GraphLaplacian.cpp
modules/NumericalSolvers/src/GraphLaplacian/: GraphLaplacian.cpp  GraphLaplacianKernel.cpp  SampleRepresentation.cpp
modules/NumericalSolvers/src/SampleRepresentation/: BandwidthCost.cpp  DensityEstimation.cpp  GraphLaplacian.cpp  KolmogorovOperator.cpp  SampleRepresentation.cpp
modules/NumericalSolvers/tests/: CMakeLists.txt  GraphLaplacianTests.cpp
modules/NumericalSolvers/tests/GraphLaplacian/: GraphLaplacianTests.cpp  SampleRepresentationTests.cpp
modules/NumericalSolvers/tests/SampleRepresentation/: BandwidthCostTests.cpp  DensityEstimationTests.cpp  GraphLaplacianTests.cpp  KolmogorovOperatorTests.cpp  SampleRepresentationTests.cpp
modules/Tools/: CMakeLists.txt
modules/Tools/src/: CMakeLists.txt  NearestNeighbors.cpp
modules/Tools/src/Kernels/: BumpKernel.cpp  CompactKernel.cpp  ExponentialKernel.cpp  HatKernel.cpp  IsotropicKernel.cpp  Kernel.cpp
modules/Tools/tests/: CMakeLists.txt  NearestNeighborsTests.cpp  SortVectorTests.cpp
modules/Tools/tests/Kernels/: BumpKernelTests.cpp  ExponentialKernelTests.cpp  HatKernelTests.cpp
spipack/: .gitignore
(+189 files in other folders)
